<resources>
    <string name="app_name">Star Wars</string>
    <string name="senha">SENHA</string>
    <string name="conectar">CONECTAR</string>
    <string name="usuario">USUÁRIO</string>
    <string name="nome_do_planeta">Nome do Planeta</string>
    <string name="imagem_do_personagem">Imagem do personagem</string>
    <string name="nome">Nome:</string>
    <string name="clima">Clima:</string>
    <string name="populacao">População:</string>
    <string name="nome_do_planeta_title">Nome do planeta</string>
    <string name="clima_do_planeta">Clima do planeta</string>
    <string name="_10000">10000</string>
    <string name="dados_do_planeta">DADOS DO PLANETA</string>
    <string name="filmes">FILMES</string>
    <string name="nome_do_personagem">Nome do Personagem</string>
    <string name="planeta_de_origem">Planeta de origem:</string>
    <string name="nome_do_planeta_de_origem">Nome do planeta de origem</string>
    <string name="genero">Gênero:</string>
    <string name="genero_do_personagem">Gênero do Personagem</string>
    <string name="ano_do_nascimento">Ano do nascimento:</string>
    <string name="exemplo_data_nascimento">17/02/1997</string>
</resources>