<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_wars_background"
    tools:context=".DetalhesPlaneta">

    <TextView
        android:id="@+id/tv_filmes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/filmes"
        android:textAlignment="center"
        android:textColor="#8A8989"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.leanback.widget.HorizontalGridView
        android:id="@+id/rv_filmes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filmes"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        tools:listitem="@layout/filmes_item"/>

    <TextView
        android:id="@+id/tv_dados_planeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/dados_do_planeta"
        android:textAlignment="center"
        android:textColor="#8A8989"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_filmes" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="#191818"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dados_planeta">

        <TextView
            android:id="@+id/tv_nome_do_planeta_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/nome"
            android:textColor="#8A8989"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_clima_do_planeta_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/clima"
            android:textColor="#8A8989"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_nome_do_planeta_title"
            app:layout_constraintTop_toBottomOf="@id/tv_nome_do_planeta_title" />

        <TextView
            android:id="@+id/tv_populacao_do_planeta_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/populacao"
            android:textColor="#8A8989"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_nome_do_planeta_title"
            app:layout_constraintTop_toBottomOf="@id/tv_clima_do_planeta_title" />

        <TextView
            android:id="@+id/tv_nome_planeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/nome_do_planeta_title"
            android:textColor="#8A8989"
            android:textSize="25sp"
            app:layout_constraintLeft_toRightOf="@id/tv_nome_do_planeta_title"
            app:layout_constraintTop_toTopOf="@id/tv_nome_do_planeta_title" />

        <TextView
            android:id="@+id/tv_clima_planeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/clima_do_planeta"
            android:textColor="#8A8989"
            android:textSize="25sp"
            app:layout_constraintLeft_toRightOf="@id/tv_clima_do_planeta_title"
            app:layout_constraintTop_toTopOf="@id/tv_clima_do_planeta_title" />

        <TextView
            android:id="@+id/tv_populacao_planeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_10000"
            android:textColor="#8A8989"
            android:textSize="25sp"
            app:layout_constraintLeft_toRightOf="@id/tv_populacao_do_planeta_title"
            app:layout_constraintTop_toTopOf="@id/tv_populacao_do_planeta_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>