<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_wars_background"
    tools:context=".InformacoesPersonagens">

    <ImageView
        android:id="@+id/iv_capa_personagem"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/cl_informacoes_personagem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_informacoes_personagem"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#302F2F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_capa_personagem">

        <TextView
            android:id="@+id/tv_nome_personagem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/nome"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nome_personagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_personagem"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_nome_personagem_title"
            app:layout_constraintTop_toBottomOf="@id/tv_nome_personagem_title" />

        <TextView
            android:id="@+id/tv_planeta_origem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/planeta_de_origem"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_nome_personagem_title"
            app:layout_constraintTop_toBottomOf="@id/tv_nome_personagem_title" />

        <TextView
            android:id="@+id/tv_planeta_origem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_planeta_de_origem"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_planeta_origem_title"
            app:layout_constraintTop_toBottomOf="@id/tv_planeta_origem_title" />

        <TextView
            android:id="@+id/tv_genero_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/genero"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_planeta_origem_title"
            app:layout_constraintTop_toBottomOf="@id/tv_planeta_origem_title" />

        <TextView
            android:id="@+id/tv_genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero_do_personagem"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_genero_title"
            app:layout_constraintTop_toBottomOf="@id/tv_genero_title" />

        <TextView
            android:id="@+id/tv_ano_nascimento_personagem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/ano_do_nascimento"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_genero_title"
            app:layout_constraintTop_toBottomOf="@id/tv_genero_title" />

        <TextView
            android:id="@+id/tv_ano_nascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemplo_data_nascimento"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_ano_nascimento_personagem_title"
            app:layout_constraintTop_toBottomOf="@id/tv_ano_nascimento_personagem_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>