<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_wars_background"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/iv_logo_star_wars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/star_wars_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="#302F2F"
        android:hint="@string/usuario"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_star_wars" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#302F2F"
        android:hint="@string/senha"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_conectar"
        android:text="@string/conectar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_senha"
        android:backgroundTint="#2979FF"
        android:layout_marginTop="40dp"
        android:layout_width="350dp"
        android:layout_height="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>